noinst_HEADERS = audio_fx.h benchmark.h biquad.h buffer.h custom_ctl.h \
    ctl_curve.h ctl_keyboard.h ctl_led.h \
    delay.h envelope.h fft.h fixed_point.h giface.h gui.h gui_controls.h inertia.h jackhost.h \
    host_session.h ladspa_wrap.h loudness.h \
    lv2_contexts.h lv2_data_access.h lv2_event.h lv2_external_ui.h \
    lv2_progress.h lv2_polymorphic_port.h lv2_string_port.h lv2_ui.h \
    lv2_uri_map.h lv2-midiport.h lv2helpers.h lv2wrap.h \
    main_win.h metadata.h modmatrix.h \
    modules.h modules_dev.h modules_dist.h modules_eq.h modules_mod.h modules_synths.h \
    modulelist.h \
    multichorus.h onepole.h organ.h osc.h osctl.h osctlnet.h osctl_glib.h preset.h \
    preset_gui.h primitives.h session_mgr.h synth.h utils.h vumeter.h wave.h waveshaping.h
