noinst_HEADERS = audio_fx.h benchmark.h biquad.h buffer.h bypass.h \
    ctl_notebook.h ctl_combobox.h ctl_fader.h ctl_frame.h ctl_meterscale.h ctl_buttons.h \
    ctl_phasegraph.h ctl_tuner.h ctl_linegraph.h ctl_pattern.h \
    ctl_curve.h ctl_keyboard.h ctl_knob.h ctl_led.h ctl_tube.h ctl_vumeter.h drawingutils.h \
    connector.h delay.h envelope.h fft.h fixed_point.h giface.h gtk_session_env.h gtk_main_win.h \
    gui.h gui_config.h gui_controls.h inertia.h jackhost.h \
    host_session.h loudness.h analyzer.h \
    lv2_data_access.h lv2_atom.h lv2_atom_util.h lv2_midi.h lv2_external_ui.h \
    lv2_state.h  lv2_progress.h lv2_options.h lv2_ui.h lv2_urid.h lv2helpers.h lv2wrap.h \
    metadata.h modmatrix.h \
    modules_tools.h modules_comp.h modules_dev.h modules_dist.h modules_filter.h \
    modules_delay.h modules_limit.h modules_mod.h modules_pitch.h modules_synths.h \
    modulelist.h \
    multichorus.h onepole.h organ.h orfanidis_eq.h osc.h osctl.h plugin_tools.h preset.h \
    preset_gui.h primitives.h session_mgr.h synth.h utils.h vumeter.h wave.h waveshaping.h wavetable.h
